--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
     <!-- RIGHT PANEL -->
     <div class="right-panel">
       <div class="image-wrapper animate__animated animate__zoomIn">
-        <img src="/Users/arh/Downloads/IMG_2917.jpg" alt="Profile Photo" class="profile-image" />
+        <img src="IMG_2917.jpg" alt="Profile Photo" class="profile-image" />
       </div>
       <div class="buttons-container animate__animated animate__fadeInUp animate__delay-2s">
         <a href="https://github.com/ArhScripts" target="_blank" class="btn-animated" aria-label="GitHub">
