--- a/index.html
+++ b/index.html
@@ -220,6 +220,53 @@
       color: #fff;
       border-radius: 4px;
     }
+
+    /* Responsive Styles */
+    @media (max-width: 768px) {
+      .container-flex {
+        flex-direction: column;
+      }
+
+      .left-panel,
+      .right-panel {
+        width: 100%;
+        min-height: auto;
+        padding: 20px;
+        text-align: center;
+      }
+
+      .profile-image {
+        width: 180px;
+        height: 180px;
+      }
+
+      .image-wrapper {
+        padding: 8px;
+      }
+
+      .buttons-container {
+        flex-direction: column;
+        gap: 12px;
+        align-items: center;
+      }
+
+      .project-card {
+        min-height: auto;
+      }
+
+      .contact-popup {
+        width: 90%;
+        max-width: 320px;
+      }
+
+      .card-body.content-blur {
+        font-size: 0.9rem;
+      }
+
+      .section-title {
+        font-size: 1.5rem;
+      }
+    }
   </style>
 </head>
 <body>
@@ -238,7 +285,7 @@
     <!-- RIGHT PANEL -->
     <div class="right-panel">
       <div class="image-wrapper animate__animated animate__zoomIn">
-        <img src="IMG_2917.jpg" alt="Profile Photo" class="profile-image" />
+        <img src="/Users/arh/Downloads/IMG_2917.jpg" alt="Profile Photo" class="profile-image" />
       </div>
       <div class="buttons-container animate__animated animate__fadeInUp animate__delay-2s">
         <a href="https://github.com/ArhScripts" target="_blank" class="btn-animated" aria-label="GitHub">
